fix : fixed closed button overlaping with high z-index

--- a/src/components/popup/popup.css
+++ b/src/components/popup/popup.css
@@ -47,4 +47,6 @@
     border: none;
     font-size: 1.5rem;
     cursor: pointer;
+
+    z-index: 1001;
 }
